<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/order_history_empty"
        style="@style/emptyLayoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your_orders_history_is_empty"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/order_history_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="horizontal"
            android:padding="@dimen/base_margin"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="start"
                android:text="@string/Order"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="start"
                android:text="@string/Date_created"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/Total_price"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/orders_history_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>