<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <bf.io.openshop.views.loopViewPager.LoopViewPager
        android:id="@+id/dialog_product_detail_images_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_product_detail_images_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/content_description_move_right"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_ff" />

        <ImageView
            android:id="@+id/dialog_product_detail_images_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/content_description_move_left"
            android:padding="8dp"
            android:src="@android:drawable/ic_media_rew" />

        <Button
            android:id="@+id/pager_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:padding="7dp"
            android:text="@string/Close"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>